# pypimcache

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: multi-test.yaml
pypimcache/: __main__.py  cache.py
pypimcache/cli/: cmd_clean.py  cmd_list.py  cmd_update.py  main.py
