[metadata]
name = pypimcache
description = Utility to manage a pypy.org metadata cache
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/pypimcache
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    pypimcache = pypimcache.__main__:main
